# dictionary

./: Cargo.toml  README.org
crates/client/: Cargo.toml
crates/client/src/: cli.rs  config.rs  file.rs  lib.rs  main.rs  main_error.rs
crates/client/src/gui/: entry.rs  mod.rs  style.css
crates/client/src/parser/: mod.rs  parse_error.rs
crates/client/src/parser/korean_stdict/: json.rs  mod.rs  original_language.rs
crates/dictionary/: Cargo.toml
crates/dictionary/src/: etymology.rs  lib.rs
crates/dictionary/src/language/: mod.rs
crates/dictionary/src/language/korean/: mod.rs  position.rs
crates/dictionary/src/language/korean/char_tree/: char_node.rs  mod.rs
crates/hangeul/: Cargo.toml
crates/hangeul/src/: jamo.rs  lib.rs
crates/hangeul/src/syllable/: iter.rs  mod.rs
