[package]
name = "client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3.3"
dictionary = { path = "../dictionary" }
serde = "1.0.197"
serde_json = "1.0.115"
take_mut = "0.2.2"
gtk4 = "0.8.2"
relm4 = { version = "0.8.1", features = ["libadwaita"] }
