[package]
name = "dictionary"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
hangeul = { path = "../hangeul" }
bincode = "1.3.3"
typetag = "0.2.16"
enum-map = { version = "2.7.3", features = ["serde"] }
